logs/build_log_dynamic_smem.txt
   Compiling tracea v0.1.0 (E:\Projects\Tracea)
error[E0425]: cannot find function `cuFuncSetAttribute` in module `cudarc::driver::sys`
   --> src\emitter\jit.rs:110:47
    |
110 |             let result = cudarc::driver::sys::cuFuncSetAttribute(
    |                                               ^^^^^^^^^^^^^^^^^^ not found in `cudarc::driver::sys`

warning: unused imports: `PyRefMut` and `PyRef`
 --> src\interface\python.rs:6:12
  |
6 | use pyo3::{PyRef, PyRefMut};
  |            ^^^^^  ^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `cudarc::nvrtc::Ptx`
 --> src\interface\python.rs:9:5
  |
9 | use cudarc::nvrtc::Ptx;
  |     ^^^^^^^^^^^^^^^^^^

warning: unused import: `std::collections::HashSet`
 --> src\semantic\mapping.rs:1:5
  |
1 | use std::collections::HashSet;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `crate::semantic::swizzle::SwizzleMode`
 --> src\emitter\cuda.rs:3:5
  |
3 | use crate::semantic::swizzle::SwizzleMode;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `cudarc::driver::LaunchAsync`
 --> src\emitter\jit.rs:2:5
  |
2 | use cudarc::driver::LaunchAsync;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0599]: no method named `cu_function` found for struct `CudaFunction` in the current scope
   --> src\emitter\jit.rs:109:33
    |
109 |             let func_ptr = func.cu_function();
    |                                 ^^^^^^^^^^^ private field, not a method

warning: unused variable: `slf`
   --> src\interface\python.rs:168:22
    |
168 |     pub fn profiling(slf: &Bound<'_, Self>) -> PyResult<PyProfilingScope> {
    |                      ^^^ help: if this is intentional, prefix it with an underscore: `_slf`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `m`
   --> src\interface\python.rs:280:5
    |
280 |     m: u32, n: u32, k: u32,
    |     ^ help: if this is intentional, prefix it with an underscore: `_m`

warning: unused variable: `n`
   --> src\interface\python.rs:280:13
    |
280 |     m: u32, n: u32, k: u32,
    |             ^ help: if this is intentional, prefix it with an underscore: `_n`

warning: unused variable: `k`
   --> src\interface\python.rs:280:21
    |
280 |     m: u32, n: u32, k: u32,
    |                     ^ help: if this is intentional, prefix it with an underscore: `_k`

warning: unused variable: `epilogue`
   --> src\interface\python.rs:281:5
    |
281 |     epilogue: PyEpilogueOp,
    |     ^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_epilogue`

warning: unused variable: `device`
   --> src\interface\python.rs:282:5
    |
282 |     device: String
    |     ^^^^^^ help: if this is intentional, prefix it with an underscore: `_device`

warning: unused variable: `m`
   --> src\interface\python.rs:295:5
    |
295 |     m: u32, n: u32, k: u32,
    |     ^ help: if this is intentional, prefix it with an underscore: `_m`

warning: unused variable: `n`
   --> src\interface\python.rs:295:13
    |
295 |     m: u32, n: u32, k: u32,
    |             ^ help: if this is intentional, prefix it with an underscore: `_n`

warning: unused variable: `k`
   --> src\interface\python.rs:295:21
    |
295 |     m: u32, n: u32, k: u32,
    |                     ^ help: if this is intentional, prefix it with an underscore: `_k`

warning: unused variable: `device`
   --> src\interface\python.rs:296:5
    |
296 |     device: String
    |     ^^^^^^ help: if this is intentional, prefix it with an underscore: `_device`

warning: unused variable: `row`
  --> src\semantic\mapping.rs:20:28
   |
20 |     pub fn get_addr(&self, row: u32, col: u32) -> String {
   |                            ^^^ help: if this is intentional, prefix it with an underscore: `_row`

warning: unused variable: `col`
  --> src\semantic\mapping.rs:20:38
   |
20 |     pub fn get_addr(&self, row: u32, col: u32) -> String {
   |                                      ^^^ help: if this is intentional, prefix it with an underscore: `_col`

Some errors have detailed explanations: E0425, E0599.
For more information about an error, try `rustc --explain E0425`.
warning: `tracea` (lib) generated 17 warnings
error: could not compile `tracea` (lib) due to 2 previous errors; 17 warnings emitted
